--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#2600B3</color>
+    <color name="colorPrimary">#FF214559</color>
+    <color name="colorPrimaryDark">#FF636363</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
